--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,17 +1,33 @@
-<%= form_with(model: @article, local: true) do |f| %>
+<div class="container">
+  <div class="row row justify-content-md-center">
+    <div class="col-10">
+      <%= render 'shared/errors' %>
+      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-success rounded", local: true) do |f| %>
+        <div class="form-group row">
+          <%= f.label :title, class: "col-2 col-form-label text-light" %>
+          <div class="col-10 mt-3">
+            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of article" %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
+        <div class="form-group row">
+          <%= f.label :description, class: "col-2 col-form-label text-light" %>
+          <div class="col-10 mt-3">
+            <%= f.text_area :description, rows:10, class: "form-control shadow rounded", placeholder: "Description of article" %>
+          </div>
+        </div>
 
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+        <div class="form-group row justify-content-md-center">
+          <div class="col-2 mt-3">
+            <%= f.submit class: "btn btn-outline-light btn-lg" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="row row justify-content-md-center">
+    <div class="col-10">
+      <%= link_to '[ Return to articles listing ]', articles_path, class: "text-success"%> 
+      </div>
+    </div>
+  </div>
+</div>
