--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,8 +25,8 @@
       <% end %>
     </div>
     <div class="row row justify-content-md-center">
-    <div class="col-10">
-      <%= link_to '[ Return to articles listing ]', articles_path, class: "text-success"%> 
+      <div class="col-10 mb-3">
+        <%= link_to '[ Return to articles listing ]', articles_path, class: "text-success"%> 
       </div>
     </div>
   </div>
