--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,7 +27,7 @@
 
         <div class="form-group row justify-content-md-center">
           <div class="col-2 mt-3">
-            <%= f.submit "Sign up!", class: "btn btn-outline-light btn-lg" %>
+            <%= f.submit(@user.new_record? ? "Sign up!" : "Update account", class: "btn btn-outline-light btn-lg") %>
           </div>
         </div>
       <% end %>
