--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -5,7 +5,7 @@
     </symbol>
   </svg>
   <% flash.each do |name , msg| %>
-    <div class="alert alert-success alert-dismissible fade show d-flex align-items-center" role="alert">
+    <div class="alert alert-<%= name == "notice" ? "success" : "danger" %> alert-dismissible fade show d-flex align-items-center" role="alert">
     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
       <div>
         <%= msg %>
