Add edit categories

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center mt-4">Create a new category</h1>
+<h1 class="text-center mt-4">Edit category name</h1>
 
 <div class="container">
   <div class="row row justify-content-md-center">
@@ -7,7 +7,7 @@
     </div>
     <div class="row row justify-content-md-center">
       <div class="col-10 mb-3">
-        <%= link_to '[ Cancel and return to categories listing ]', categories_path, class: "text-success"%> 
+        <%= link_to '[ Cancel and return to category ]', @category, class: "text-success"%> 
       </div>
     </div>
   </div>
